vcl/inc/unx/salgdi.h
@@ -271,6 +271,10 @@ public:
 
     virtual OpenGLContext          *BeginPaint() SAL_OVERRIDE;
 
+#if ENABLE_CAIRO_CANVAS
+    void clipRegion(cairo_t* cr);
+#endif // ENABLE_CAIRO_CANVAS
+
     bool TryRenderCachedNativeControl(ControlCacheKey& aControlCacheKey,
                                       int nX, int nY);
 
@@ -338,6 +342,11 @@ protected:
 
     Region                          pPaintRegion_;
     Region                          mpClipRegion;
+#if ENABLE_CAIRO_CANVAS
+    vcl::Region                     maClipRegion;
+    SalColor                        mnPenColor;
+    SalColor                        mnFillColor;
+#endif // ENABLE_CAIRO_CANVAS
 
     GC                              pFontGC_;       // Font attributes
     Pixel                           nTextPixel_;
